Address jaxrs.api.rs.core.configuration.JAXRSClient
Fix various small API issues